<resources>
    <string name="app_name">KangTester</string>
    <string name="action_settings">Settings</string>
    <string name="audio_check_fragment">Audio Check</string>
    <string name="touch_check_fragment">Touch Check</string>
    <string name="play_sample_audio">Play Sample Audio</string>
    <string name="stop_sample_audio">Stop Audio</string>
    <string name="audio_not_playing">Not Playing</string>
    <string name="audio_playing">Playing %.1fs / %.1fs</string>
    <string name="audio_recording">Recording %.1fs</string>
    <string name="first_fragment_label">First fragment</string>
    <string name="record_start_media_recorder">Start Recording (MediaRecorder)</string>
    <string name="record_start_audio_recorder">Start Recording (AudioRecord)</string>
    <string name="record_stop">Stop Recording</string>
    <string name="adjust_lower">VOL-</string>
    <string name="adjust_raise">VOL+</string>
    <string name="adjust_mute">Mute</string>
    <string name="adjust_unmute">Unmute</string>
    <string name="adjust_toggle_mute">Toggle Mute</string>
    <string name="adjust_voice_call">Voice Call</string>
    <string name="adjust_system">System</string>
    <string name="adjust_ring">Ring</string>
    <string name="adjust_music">Music</string>
    <string name="adjust_alarm">Alarm</string>
    <string name="adjust_accessibility">Accessibility</string>
    <string name="current_volume">Current Volume for %s: %d (%d-%d) Mute: %b</string>
    <string name="current_volume_select">Select a stream type from list</string>
    <string name="num_touches">Touches detected: %d</string>
    <string name="scroll_pos">Scroll position: X=%f, Y=%f</string>
    <string name="fling_det">Detected fling: X=%f, Y=%f</string>
    <string name="capture_image">Capture Image</string>
    <string name="capture_video">Capture Video</string>
    <string name="camera_change_side">Change Side</string>
    <string name="camera_check">Camera Check</string>
    <string name="camera_missing">No available camera!</string>
    <string name="sensor_check">Sensor Check</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="linear_acceleration">Linear Acceleration</string>
    <string name="rotation_vector">Rotation Vector</string>
    <string name="luminance">Luminance</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="proximity">Proximity</string>
    <string name="no_data">No Data</string>
    <string name="vibrate">Vibrate</string>
    <string name="sensor_value">Type: %s\nVendor: %s\nValues: [%s]</string>
    <string name="vendor_unknown">Unknown</string>
    <string name="waiting_for_data">Waiting for data</string>
    <string name="sensor_not_exist">Sensor does not exist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_title">Checkout FydeTab Duo</string>
    <string name="notification_description">The long-awaited FydeTab Duo is available!\nClick to view details.</string>
    <string name="notification_no_permission">No notification permission</string>
    <string name="post_basic_notification">Basic Notification</string>
    <string name="notification_check">Notification Check</string>
    <string name="post_notification_with_action">With Action Buttons</string>
    <string name="notification_click_link">https://fydetabduo.com/</string>
    <string name="notification_type_prompt">Tell us the reason</string>
    <string name="notification_action_1">Comment</string>
    <string name="notification_comment_received">Your comment \"%s\" is received.</string>
    <string name="notification_action_2">Dismiss</string>
    <string name="post_notification_with_progress_bar">With Progress Bar</string>
    <string name="del_notification">Delete Last Notification</string>
    <string name="notification_title_2">Your brain is being upgraded…</string>
    <string name="notification_title_3">Your brain is now up-to-date!</string>
    <string name="notification_content_3">Click to dismiss this notification</string>
    <string name="progress_bar_indeterminate">Indeterminate</string>
    <string name="post_notification_with_image">With Image</string>
    <string name="app_version">App version %s, built at %s</string>
    <string name="scan_wifi">Scan Wi-Fi</string>
    <string name="get_wifi_scan_result">Get Scan Result</string>
    <string name="scan_result_time">Last result reported: %s (%s)</string>
    <string name="scan_result_never">never</string>
    <string name="scan_result_manual">manually retrieved</string>
    <string name="scan_result_auto">automatically reported</string>
    <string name="scan_result_empty">Scan result is empty</string>
    <string name="scan_started">Scan is started</string>
    <string name="scan_not_started">Scan is not started</string>
    <string name="scan_failed">Scan failed</string>
    <string name="wifi_check">Wi-Fi Scanner Check</string>
    <string name="hw_decode">HW Decode</string>
    <string name="video_check">Video Playback Check</string>
    <string name="sw_decode">SW Decode</string>
    <string name="codec_h264">H264</string>
    <string name="codec_h265">H265</string>
    <string name="video_local">Local Video</string>
    <string name="video_stream">Online Stream</string>
    <string name="video_fullscreen">Fullscreen</string>
    <string name="video_loading">Loading</string>
    <string name="video_playing">Playing</string>
    <string name="video_error">Video Error: %s\nMessage: %s\nCaused by: %s</string>
    <string name="codec_error">%s Codec Error: %s</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="codec_name">%s Codec: %s</string>
    <string name="start_screen_capture">Start Screen Capture</string>
    <string name="stop_screen_capture">Stop Screen Capture</string>
    <string name="user_cancelled_capture">User cancelled screen capture</string>
    <string name="screen_capture_check">Screen Capture Check</string>
    <string name="capturing_screen">Capturing screen</string>
    <string name="storage_check">Storage Check</string>
    <string name="external_storage_desc">External Storage State: %s</string>
    <string name="write_app_specific_dir">Write file to app specific dir</string>
    <string name="read_app_specific_dir">Read file from app specific dir</string>
    <string name="write_file_success">Successfully wrote to %s\nFile content: %s</string>
    <string name="read_file_success">Successfully read from %s\nFile content: %s</string>
    <string name="read_file_success_match">Successfully read from %s\nFile content: %s\nMatch: %b</string>
    <string name="write_storage_root">Write file to external storage root</string>
    <string name="read_storage_root">Read file from external storage root</string>
    <string name="save_picture_with_media_store_api">Save an image with MediaStore API</string>
    <string name="browse_pictures_with_media_store_api">Browse images with MediaStore API</string>
    <string name="document_open">Open a file with Documents UI</string>
    <string name="document_dir_open">Choose directory with Documents UI</string>
    <string name="request_storage_manage_permission">Request MANAGE_EXTERNAL_STORAGE permission</string>
    <string name="got_storage_manage_permission">Already have MANAGE_EXTERNAL_STORAGE permission</string>
    <string name="image_load_error">Error while loading image %s: %s</string>
    <string name="mime_default">text/plain</string>
    <string name="mime_prompt">MIME Type</string>
    <string name="file_pick_cancelled">File pick cancelled by user.</string>
    <string name="file_info">File size: %s\nContent preview: %s</string>
    <string name="image_count">%d images found.</string>
    <string name="no_image_permission">READ_MEDIA_IMAGES permission not granted, I will only be able to load images created by myself.</string>
    <string name="show_overlay">Overlay window</string>
    <string name="no_permission">Permission not granted by user</string>
    <string name="overlay_description">Click to change icon. Long press to close overlay.</string>
    <string name="camera_loading">Loading camera</string>
    <string name="camera_loaded">Camera is loaded, total camera count: %d</string>
    <string name="image_saved_message">Image saved to: %s</string>
    <string name="image_capture_error">Error occurred while capturing: %s</string>
    <string name="rk3588_npu_check">RK3588 NPU Check</string>
    <string name="download_npu_model">Download NPU Model</string>
    <string name="image_source_static">Static Image</string>
    <string name="image_source_from_camera">From Camera</string>
    <string name="choose_image">Choose Image</string>
    <string name="rk_nn_url">https://fydeos-archero-assets.oss-cn-beijing.aliyuncs.com/yolov5s_rk3588.rknn</string>
    <string name="download_progress">%dk</string>
    <string name="model_ready">Model is ready</string>
</resources>