<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationCheckFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_no_permission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/notification_no_permission" />

    <LinearLayout
        android:id="@+id/l_notification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_basic_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_basic_notification" />

        <Button
            android:id="@+id/btn_notification_with_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_notification_with_action" />

        <Button
            android:id="@+id/btn_post_notification_with_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_notification_with_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_notification_with_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_notification_with_progress_bar" />

            <CheckBox
                android:id="@+id/cb_progress_indeterminate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_bar_indeterminate" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_del_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del_notification" />

        <TextView
            android:id="@+id/tv_notification_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>