<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioCheck">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_current_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Not Playing" />

            <Button
                android:id="@+id/btn_stop_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="Stop" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_play_sample_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_sample_audio" />

        <Button
            android:id="@+id/btn_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Record" />

        <TextView
            android:id="@+id/tv_amplitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Max Amplitude" />

        <Button
            android:id="@+id/btn_play_recorded_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Play Recorded Audio" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_current_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_volume_select" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_lower_volume"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/adjust_lower"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_raise_volume"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/adjust_raise"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_mute"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/adjust_mute"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_unmute"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/adjust_unmute"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_toggle_mute"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/adjust_toggle_mute"
                android:textSize="10sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_volume_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_volume_voice_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_voice_call" />

            <RadioButton
                android:id="@+id/rb_volume_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_system" />

            <RadioButton
                android:id="@+id/rb_volume_ring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_ring" />

            <RadioButton
                android:id="@+id/rb_volume_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_music" />

            <RadioButton
                android:id="@+id/rb_volume_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_alarm" />

            <RadioButton
                android:id="@+id/rb_volume_accessibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_accessibility" />
        </RadioGroup>

    </LinearLayout>

</FrameLayout>