<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoCheckFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_decoder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_sw_decode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sw_decode" />

            <RadioButton
                android:id="@+id/rb_hw_decode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hw_decode" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_video_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_local_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_local" />

            <RadioButton
                android:id="@+id/rb_streaming_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_stream" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_encoding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_h264"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codec_h264" />

            <RadioButton
                android:id="@+id/rb_h265"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codec_h265" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_fullscreen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_playing"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_loading"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_video_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.media3.ui.PlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.media3.ui.PlayerView>

    </LinearLayout>


</FrameLayout>