<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WiFiScanCheckFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_scan_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_wifi" />

        <Button
            android:id="@+id/btn_get_scan_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_wifi_scan_result" />

        <TextView
            android:id="@+id/tv_last_reported"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_result_time" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_scan_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_result_empty" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</FrameLayout>