<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Rk3588NpuCheckFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_message_npu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_download_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_npu_model" />

    <RadioGroup
        android:id="@+id/rg_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_image_from_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_source_from_camera" />

        <RadioButton
            android:id="@+id/rb_image_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_source_static" />

        <Button
            android:id="@+id/btn_load_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/choose_image" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/fm_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#D81818"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="200:100S"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_optimizationLevel="ratio">

            <SurfaceView
                android:id="@+id/sv_camera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/iv_reco_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/iv_reco_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>